# Smart-Recycling-Hub

./: README.md
B402_잘해보조/AGV/AGV 소스/lidar_on_off/: lidar_off.py  lidar_on.py
B402_잘해보조/AGV/AGV 소스/myagv_navigation/: CMakeLists.txt
B402_잘해보조/AGV/AGV 소스/myagv_navigation/launch/: navigation_active_2.launch
B402_잘해보조/AGV/AGV 소스/myagv_navigation/scripts/: qr_position_MJH.py
B402_잘해보조/AGV/Server(노트북) 소스/: firebase_done_watcher.py
B402_잘해보조/AGV/Server(노트북) 소스/myagv_navigation/launch/: navigation_active_2.launch
B402_잘해보조/AGV/Server(노트북) 소스/ros_server_client/: CMakeLists.txt  firebase_done_watcher.py  package.xml
B402_잘해보조/AGV/Server(노트북) 소스/ros_server_client/launch/: nav_nodes.launch
B402_잘해보조/AGV/Server(노트북) 소스/ros_server_client/script/: node_1.py  node_2.py  node_3.py  node_back.py  node_teleop.py  ros_server.py
B402_잘해보조/cobot/: firebase_COBOT_last1.py
B402_잘해보조/cobot/아두이노/cobot_suction_ultrasonic/: cobot_suction_ultrasonic.ino
B402_잘해보조/cobot/아두이노/아두이노 회로도/arduino_circuit_diagram/: arduino_circuit_diagram.kicad_prl  arduino_circuit_diagram.kicad_pro  arduino_circuit_diagram.kicad_sch
B402_잘해보조/기구/: Case.stl  Joint1.stl  hook.stl  suction_pack.stl
B402_잘해보조/기획/: 시나리오 제작.xlsx
B402_잘해보조/아파트 아두이노/apartarduino/: apartarduino.ino
B402_잘해보조/앱/앱 소스/: agv.gd  global.gd  home.gd  main.gd  mydata.gd  road.gd  sedae.gd  shop.gd  shop_item.gd  store.gd  ui.gd
