<?xml version="1.0"?>
<package format="2">
  <name>ros_server_client</name>
  <version>0.0.0</version>
  <description>The ros_server_client package</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>

  <export>
  </export>
</package>

